labs/lab 2/Lab2.txt
Hi!! you said to submit what I have so you 
remember I made an honest effort... 
but the only thing I have is error codes... 
so I'm including all of those 

Stort@sss MINGW64 ~/cmpt221 (lab-2)
$ python
Python 3.12.6 (tags/v3.12.6:a4a2d2b, Sep  6 2024, 20:11:23) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> pip list
  File "<stdin>", line 1
    pip list
        ^^^^
SyntaxError: invalid syntax
>>> exit
Use exit() or Ctrl-Z plus Return to exit        
>>> exit()


Stort@sss MINGW64 ~/cmpt221 (lab-2)
$ python3 -m pip list
bash: python3: command not found